# Factuality-First-RAG

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: exp_2wiki.yaml  exp_b1_closed_book.yaml  exp_b2_always_rag.yaml  exp_b3_gate_only.yaml  exp_b4_score_only.yaml  exp_b5_learned_scorer.yaml  exp_fever.yaml  exp_full_pipeline.yaml  exp_hagrid.yaml  exp_popqa.yaml  exp_sample.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CLAUDE_VALIDATION_PROMPT.md  CLAUDE_VALIDATION_PROMPT_2.md  EXPERIMENT_PLAN.md  EXPERIMENT_RUNBOOK_2.md  NEXT_SESSION_PROMPT.md  NEXT_SESSION_PROMPT_2.md  PAPER_OUTLINE_2.md  SESSION4_PROMPT.md  SESSION_LOG.md  STATUS_TRACKER_S4.md  SUGGESTIONS.md  SUGGESTIONS_2.md
factuality_rag/: __init__.py  experiment_runner.py  model_registry.py
factuality_rag/cli/: __init__.py  __main__.py
factuality_rag/data/: __init__.py  loader.py  wikipedia.py
factuality_rag/eval/: __init__.py  metrics.py
factuality_rag/gating/: __init__.py  probe.py
factuality_rag/generator/: __init__.py  wrapper.py
factuality_rag/index/: __init__.py  builder.py
factuality_rag/pipeline/: __init__.py  orchestrator.py
scripts/: aggregate_results.py  analyze_errors.py  analyze_gating.py  analyze_scorer.py  bootstrap_test.py  build_corpus.py  demo.py  run_sample_experiment.sh  train_scorer.py  tune_scorer_weights.py
tests/: conftest.py  test_data.py  test_eval.py  test_gating.py  test_integration.py  test_learned_scorer.py  test_model_registry.py  test_new_features.py  test_pipeline.py  test_retriever.py  test_scorer.py
(+6 files in other folders)
